--- a/styles/styles.css
+++ b/styles/styles.css
@@ -437,6 +437,7 @@ figure:first-child {
 }
 
 .about_company h3 {
+    font-size: 42px;
     padding-top: 56px;
     padding-bottom: 40px;
 }
@@ -546,7 +547,9 @@ figure:first-child {
     }
 
     .wrapper {
-        padding-bottom: 60px;
+        padding-bottom: 38px;
+        max-width: 1230px;
+        margin: auto;
     }
 
     .menu_burger {
@@ -665,6 +668,7 @@ figure:first-child {
         font-size: 24px;
         padding-top: 18px;
         padding-bottom: 18px;
+        box-sizing: border-box;
     }
 
     .price_holder {
